--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,29 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name=".RegisterActivity"
+            android:label="@string/title_activity_register"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".CustomerDetails"
+            android:label="@string/title_activity_customer_details"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.gdevlast.counceltracker.MainActivity"/>
+        </activity>
+        <activity
+            android:name=".AddInteraction"
+            android:label="@string/title_activity_add_interaction"
+            android:parentActivityName=".CustomerDetails"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.gdevlast.counceltracker.CustomerDetails"/>
+        </activity>
     </application>
 
 </manifest>
